# coremark

./: README.md  sdkconfig.defaults.esp32p4
main/: CMakeLists.txt  Kconfig.projbuild  core_main.c  core_portme.c  main.c
